Fix wrapping pseudonym in IE8.

--- a/src/stylesheets/livefyre_widget_overrides.scss
+++ b/src/stylesheets/livefyre_widget_overrides.scss
@@ -173,6 +173,10 @@ $ftLinkHover: oColorsGetPaletteColor(black);
 				display: inline-block;
 				position: relative;
 				overflow: visible;
+
+				.fyre-user-profile-link {
+					white-space: nowrap\9; /* IE8 and below */
+				}
 			}
 
 			.o-comment-ui--settings {
